--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,114 +1,3 @@
-/*Navigation Bar*/
-/*.topnav {
-    position: sticky;
-    top: 0px;
-    box-shadow: 2px 2px 10px black;
-    display: flex;
-    justify-content: space-around;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    height: 85px;
-    background-color: rgba(45, 43, 85, 0.849);
-    overflow: hidden;
-}
-  
-
-.topnav a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 30px 10.5% 0px 10.5%;
-    text-decoration: none;
-    font-size: 17px;
-}
-  
-
-.topnav a:hover {
-    background-color: rgba(209, 240, 255, 0.74);
-    color: rgba(18, 17, 32, 0.849);
-}
-  
-
-.topnav a.active {
-    background-color: rgb(24, 23, 50);
-    color: white;
-}
-
-.topnav a.active:hover {
-    background-color: rgba(209, 240, 255, 0.74);
-    color: rgba(18, 17, 32, 0.849);
-}*/
-  
- 
-/*
-.home {
-    margin-top: 60px;
-    color: rgb(31, 29, 71);
-    font-family: 'Lobster', cursive;
-    margin-left: 90px;
-}
-
-.about{
-    position: absolute;
-    top: 600px;
-}
-
-.aboutH1 {
-    color: rgb(31, 29, 71);
-    text-align: center;
-    font-family: 'Lobster', cursive;
-    text-shadow: 2px 2px 5px rgba(45, 43, 85);
-    font-size: 100px;
-}
-
-.aboutP {
-    color: rgb(22, 21, 51);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 900;
-    font-size: 30px;
-    letter-spacing: 1px;
-    margin-left: 110px;
-    margin-right: 110px;
-    line-height: 1.5;
-    text-indent: 75px;
-}
-
-.creation {
-    position: absolute;
-    top: 1250px;
-    text-align: center;
-}
-
-.creationH1 {
-    color: rgb(31, 29, 71);
-    font-family: 'Lobster', cursive;
-    text-shadow: 2px 2px 5px rgba(45, 43, 85);
-    font-size: 100px;
-}
-
-.creationP {
-    color: rgb(32, 30, 73);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 900;
-    font-size: 60px;
-    letter-spacing: 1px;
-    margin-top: 200px;
-    margin-left: 420px;
-}
-
-.contact {
-    position: absolute;
-    top: 1900px;
-    text-align: center;
-}
-
-.contactH1 {
-    color: rgb(31, 29, 71);
-    font-family: 'Lobster', cursive;
-    text-shadow: 2px 2px 5px rgba(45, 43, 85);
-    font-size: 100px;
-}*/
-
 body { 
     background-color: bisque;
 }
@@ -185,11 +74,7 @@ body {
     top: 83%;
 }
 
-.mobileContact {
-    top: 10px;
-}
-
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 480px) {
     .mobileContact {
         display: none;
     }
@@ -197,20 +82,30 @@ body {
         height: 100vh;
         align-items: center;
     }
+
+    .topnav {
+        display: none;
+    }
 }
 
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 480px) {
     .sidenav {
         display: none;
     }
 
     .name {
+        position: absolute;
+        top: 0px;
+        right: 25%;
         height: 50vh;
         align-items: flex-end;
     }
 
     .mobileContact {
+        position: absolute;
+        top: 50%;
+        right: 23%;
         display: flex;
         justify-content: center;
     }
@@ -218,5 +113,52 @@ body {
     #email {
         margin-left: 30px;
         margin-right: 30px;
+    }
+
+/*Mobile Nav Bar*/
+    .topnav {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 900;
+        overflow: hidden;
+        background-color: white;
+        position: relative;
+    }
+  
+/* Hide the links inside the navigation menu (except for logo/home) */
+    .topnav #myLinks {
+        display: none;
+    }
+  
+/* Style navigation menu links */
+    .topnav a {
+        color: black;
+        padding: 20px 23px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+  
+/* Style the hamburger menu */
+    .topnav a.icon {
+        background: white;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+  
+/* Add a grey background color on mouse-over */
+    .topnav a.icon:hover {
+        background-color: white
+    }
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+  
+/* Style the active link (or home/logo) */
+    .active {
+        background-color: whitesmoke;
+        color: black;
     }
 }
