--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -95,6 +95,7 @@ body {
     }
 
     .name {
+        z-index: -1;
         position: absolute;
         top: 0px;
         right: 25%;
@@ -103,9 +104,11 @@ body {
     }
 
     .mobileContact {
+        z-index: -1;
         position: absolute;
         top: 50%;
         right: 23%;
+        margin-top: 5%;
         display: flex;
         justify-content: center;
     }
@@ -117,6 +120,7 @@ body {
 
 /*Mobile Nav Bar*/
     .topnav {
+        border-radius: 2%;
         font-family: 'Roboto', sans-serif;
         font-weight: 900;
         overflow: hidden;
@@ -132,9 +136,9 @@ body {
 /* Style navigation menu links */
     .topnav a {
         color: black;
-        padding: 20px 23px;
+        padding: 4% 3.5%;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 100%;
         display: block;
     }
   
