--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,6 +1,5 @@
 body { 
-    background-image: radial-gradient(beige, bisque);
-    height: 100vh;
+
 }
 
 .name {
@@ -13,7 +12,7 @@ body {
     display: flex;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
-    color: rgb(42, 66, 94);
+    color: rgb(0, 81, 173);
     font-size: 40px;
 }
 
@@ -27,7 +26,7 @@ body {
     top: 0; /* Stay at the top */
     left: 0;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 20px black;
+    box-shadow: 0px 0px 15px black;
     border-radius: 5px;
 }
 
@@ -43,6 +42,11 @@ body {
 }
 
 @media screen and (min-width: 480px) {
+    body {
+    background-image: radial-gradient(beige, bisque);
+    height: 100vh;
+    }
+
     #email {
         top: 3%;
     }
@@ -109,6 +113,9 @@ body {
 }
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-width: 480px) {
+    body {
+        background-color: bisque;
+    }
     .sidenav {
         display: none;
     }
