--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,11 +1,12 @@
-body { 
-
+body {
+    overflow: hidden;
 }
 
 .name {
     display: flex;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
+    font-family: 900;
 }
 
 .description {
@@ -21,13 +22,16 @@ body {
     margin-top: 10%;
     height: 52%;
     width: 4%;
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    position: fixed;
+    /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1;
+    /* Stay on top */
+    top: 0;
     left: 0;
+    /* Stay at the top */
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 15px black;
-    border-radius: 5px;
+    border-radius: 0px 5px 5px 0px;
 }
 
 .contact {
@@ -43,57 +47,58 @@ body {
 
 @media screen and (min-width: 480px) {
     body {
-    background-image: radial-gradient(beige, bisque);
-    height: 100vh;
+        background-image: radial-gradient(beige, bisque);
+        height: 100vh;
     }
 
     #email {
         top: 3%;
     }
-    
+
     #email:hover {
         top: 2.5%;
     }
-    
+
     #linkedIn {
         top: 22%;
     }
-    
+
     #linkedIn:hover {
         top: 21.5%
     }
-    
+
     #gitHub {
         width: 75%;
         left: 13%;
         top: 42%;
     }
-    
+
     #gitHub:hover {
         width: 87%;
         top: 41%;
         left: 7%
     }
-    
+
     #instagram {
         top: 63%;
     }
-    
+
     #instagram:hover {
         top: 62.5%;
     }
-    
+
     #twitter {
         top: 84%;
     }
-    
+
     #twitter:hover {
         top: 83.5%;
     }
-    
+
     .mobileContact {
         display: none;
     }
+
     .name {
         font-size: 25px;
         height: 100vh;
@@ -110,13 +115,108 @@ body {
         align-items: center;
         align-items: flex-end;
     }
+
+    /* The sidebar menu */
+    #mySidebar {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 900;
+        height: 100%;
+        /* 100% Full-height */
+        /* 0 width - change this with JavaScript */
+        z-index: 1;
+        /* Stay on top */
+        top: 0;
+        right: 0;
+        background-color: rgb(255, 255, 255);
+        /* Black*/
+        overflow-x: hidden;
+        /* Disable horizontal scroll */
+        padding-top: 40px;
+        /* Place content 60px from the top */
+        transition: 0.5s;
+        /* 0.5 second transition effect to slide in the sidebar */
+    }
+
+    /* The sidebar links */
+    #mySidebar a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #181818;
+        display: block;
+        transition: 0.3s;
+    }
+
+    /* When you mouse over the navigation links, change their color */
+    #mySidebar a:hover {
+        color: #acacac;
+    }
+
+    /* Position and style the close button (top right corner) */
+    #mySidebar {
+        position: absolute;
+        top: 0;
+        right: 0px;
+        font-size: 36px;
+    }
+
+    #closebtn {
+        position: absolute;
+        top: 260px;
+        right: 0;
+        height: 80px;
+        width: 50px;
+        cursor: pointer;
+        border-radius: 15px 0px 0px 15px;
+        background-color: rgb(255, 255, 255);
+        border: none;
+        outline: none;
+        transition:margin 1s linear;
+    }
+
+    #closebtn:hover {
+        background-color: rgba(82, 82, 82);
+    }
+    /* The button used to open the sidebar */
+    #openbtn {
+        position: absolute;
+        top: 260px;
+        right: 0px;
+        height: 80px;
+        width: 50px;
+        cursor: pointer;
+        border-radius: 15px 0px 0px 15px;
+        background-color: rgb(255, 255, 255);
+        border: none;
+        outline: none;
+    }
+
+    #openbtn:hover {
+        background-color: rgba(82, 82, 82);
+    }
+
+    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+    #main {
+        transition: margin-left .5s;
+        /* If you want a transition effect */
+        padding: 20px;
+    }
 }
-  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+
 @media screen and (max-width: 480px) {
     body {
         background-color: bisque;
     }
+
     .sidenav {
+        display: none;
+    }
+
+    .sidebar {
+        display: none;
+    }
+
+    #main {
         display: none;
     }
 
@@ -152,7 +252,7 @@ body {
         margin-right: 30px;
     }
 
-/*Mobile Nav Bar*/
+    /*Mobile Nav Bar*/
     .topnav {
         z-index: 1;
         box-shadow: 0px 0px 3px black;
@@ -163,13 +263,13 @@ body {
         background-color: white;
         position: relative;
     }
-  
-/* Hide the links inside the navigation menu (except for logo/home) */
+
+    /* Hide the links inside the navigation menu (except for logo/home) */
     .topnav #myLinks {
         display: none;
     }
-  
-/* Style navigation menu links */
+
+    /* Style navigation menu links */
     .topnav a {
         color: black;
         padding: 4% 3.9%;
@@ -177,8 +277,8 @@ body {
         font-size: 100%;
         display: block;
     }
-  
-/* Style the hamburger menu */
+
+    /* Style the hamburger menu */
     .topnav a.icon {
         background: white;
         display: block;
@@ -186,29 +286,30 @@ body {
         right: 0;
         top: 0;
     }
-  
-/* Add a grey background color on mouse-over */
+
+    /* Add a grey background color on mouse-over */
     .topnav a.icon:hover {
         background-color: white
     }
+
     .topnav a:hover {
         background-color: #ddd;
         color: black;
     }
-  
-/* Style the active link (or home/logo) */
+
+    /* Style the active link (or home/logo) */
     .active {
         background-color: whitesmoke;
         color: black;
         letter-spacing: 2px;
     }
-    
+
     @media screen and (min-height: 775px) {
         .mobileContact {
             top: 55%;
         }
     }
-    
+
     @media screen and (max-height: 775px) {
         .mobileContact {
             top: 60%;
