--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,318 +1,33 @@
+:root {
+    --main-color: #FFF0E5;
+    --font-color: #10162F;
+}
+
 body {
-    overflow: hidden;
+    height: 100%;
+    width: 100%;
+
+    background-color: var(--main-color);
+
+    font-family: Poppins, sans-serif;
+    color: var(--font-color);
 }
 
-.name {
-    display: flex;
-    justify-content: center;
-    font-family: 'Roboto', sans-serif;
-    font-family: 900;
-}
+.heading {    
+    /* Width of the box behind the header */
+    width: 6em;
 
-.description {
-    display: flex;
-    justify-content: center;
-    font-family: 'Roboto', sans-serif;
-    color: rgb(0, 81, 173);
-    font-size: 40px;
-}
+    /* Custom 3D box heading with dynamic sizing */
+    font-size: min(4em, 7vw);
+    font-weight: 800;
+    color: transparent;
+    text-shadow: 2px -2px 0px var(--font-color);
 
-/* The sidebar menu */
-.sidenav {
-    margin-top: 10%;
-    height: 52%;
-    width: 4%;
-    position: fixed;
-    /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1;
-    /* Stay on top */
-    top: 0;
-    left: 0;
-    /* Stay at the top */
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 15px black;
-    border-radius: 0px 5px 5px 0px;
-}
+    /* Creates the shadow outline */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--font-color);
 
-.contact {
-    width: 60%;
-    position: absolute;
-    left: 20%;
-}
-
-.contact:hover {
-    width: 70%;
-    left: 15%;
-}
-
-@media screen and (min-width: 480px) {
-    body {
-        background-image: radial-gradient(beige, bisque);
-        height: 100vh;
-    }
-
-    #email {
-        top: 3%;
-    }
-
-    #email:hover {
-        top: 2.5%;
-    }
-
-    #linkedIn {
-        top: 22%;
-    }
-
-    #linkedIn:hover {
-        top: 21.5%
-    }
-
-    #gitHub {
-        width: 75%;
-        left: 13%;
-        top: 42%;
-    }
-
-    #gitHub:hover {
-        width: 87%;
-        top: 41%;
-        left: 7%
-    }
-
-    #instagram {
-        top: 63%;
-    }
-
-    #instagram:hover {
-        top: 62.5%;
-    }
-
-    #twitter {
-        top: 84%;
-    }
-
-    #twitter:hover {
-        top: 83.5%;
-    }
-
-    .mobileContact {
-        display: none;
-    }
-
-    .name {
-        font-size: 25px;
-        height: 100vh;
-        align-items: center;
-    }
-
-    .topnav {
-        display: none;
-    }
-
-    .name {
-        height: 100vh;
-        height: 50vh;
-        align-items: center;
-        align-items: flex-end;
-    }
-
-    /* The sidebar menu */
-    #mySidebar {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 900;
-        height: 100%;
-        /* 100% Full-height */
-        /* 0 width - change this with JavaScript */
-        z-index: 1;
-        /* Stay on top */
-        top: 0;
-        right: 0;
-        background-color: rgb(255, 255, 255);
-        /* Black*/
-        overflow-x: hidden;
-        /* Disable horizontal scroll */
-        padding-top: 40px;
-        /* Place content 60px from the top */
-        transition: 0.5s;
-        /* 0.5 second transition effect to slide in the sidebar */
-    }
-
-    /* The sidebar links */
-    #mySidebar a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #181818;
-        display: block;
-        transition: 0.3s;
-    }
-
-    /* When you mouse over the navigation links, change their color */
-    #mySidebar a:hover {
-        color: #acacac;
-    }
-
-    /* Position and style the close button (top right corner) */
-    #mySidebar {
-        position: absolute;
-        top: 0;
-        right: 0px;
-        font-size: 36px;
-    }
-
-    #closebtn {
-        position: absolute;
-        top: 260px;
-        right: 0;
-        height: 80px;
-        width: 50px;
-        cursor: pointer;
-        border-radius: 15px 0px 0px 15px;
-        background-color: rgb(255, 255, 255);
-        border: none;
-        outline: none;
-        transition:margin 1s linear;
-    }
-
-    #closebtn:hover {
-        background-color: rgba(82, 82, 82);
-    }
-    /* The button used to open the sidebar */
-    #openbtn {
-        position: absolute;
-        top: 260px;
-        right: 0px;
-        height: 80px;
-        width: 50px;
-        cursor: pointer;
-        border-radius: 15px 0px 0px 15px;
-        background-color: rgb(255, 255, 255);
-        border: none;
-        outline: none;
-    }
-
-    #openbtn:hover {
-        background-color: rgba(82, 82, 82);
-    }
-
-    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-    #main {
-        transition: margin-left .5s;
-        /* If you want a transition effect */
-        padding: 20px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    body {
-        background-color: bisque;
-    }
-
-    .sidenav {
-        display: none;
-    }
-
-    .sidebar {
-        display: none;
-    }
-
-    #main {
-        display: none;
-    }
-
-    .name {
-        font-size: 20px;
-        z-index: -1;
-        position: absolute;
-        top: 0px;
-        width: 100vw;
-        height: 45vh;
-        justify-content: center;
-        align-items: flex-end;
-    }
-
-    .description {
-        position: absolute;
-        top: 42%;
-        display: flex;
-        width: 100vw;
-        justify-content: center;
-    }
-
-    .mobileContact {
-        z-index: -1;
-        position: absolute;
-        display: flex;
-        width: 100vw;
-        justify-content: center;
-    }
-
-    #email {
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-
-    /*Mobile Nav Bar*/
-    .topnav {
-        z-index: 1;
-        box-shadow: 0px 0px 3px black;
-        border-radius: 2%;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 900;
-        overflow: hidden;
-        background-color: white;
-        position: relative;
-    }
-
-    /* Hide the links inside the navigation menu (except for logo/home) */
-    .topnav #myLinks {
-        display: none;
-    }
-
-    /* Style navigation menu links */
-    .topnav a {
-        color: black;
-        padding: 4% 3.9%;
-        text-decoration: none;
-        font-size: 100%;
-        display: block;
-    }
-
-    /* Style the hamburger menu */
-    .topnav a.icon {
-        background: white;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    /* Add a grey background color on mouse-over */
-    .topnav a.icon:hover {
-        background-color: white
-    }
-
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    /* Style the active link (or home/logo) */
-    .active {
-        background-color: whitesmoke;
-        color: black;
-        letter-spacing: 2px;
-    }
-
-    @media screen and (min-height: 775px) {
-        .mobileContact {
-            top: 55%;
-        }
-    }
-
-    @media screen and (max-height: 775px) {
-        .mobileContact {
-            top: 60%;
-        }
-    }
+    /* Positioning on the page */
+    margin-top: 0;
+    margin-left: 2%;
 }
