--- a/libs/css/navbar.css
+++ b/libs/css/navbar.css
@@ -49,3 +49,9 @@
 .nav-link:hover::before {
     width: 100%;
 }
+
+@media only screen and (max-width: 750px) {
+    #navbar {
+        display: none;
+    }
+}
