--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,11 +1,15 @@
 :root {
     --main-color: #FFF0E5;
     --font-color: #10162F;
+    --border-showdow: -9px 9px;
 }
 
 body {
     height: 100%;
     width: 100%;
+
+    /* Prevents scrolling */
+    overflow: hidden;
 
     background-color: var(--main-color);
 
@@ -21,13 +25,192 @@ body {
     font-size: min(4em, 7vw);
     font-weight: 800;
     color: transparent;
-    text-shadow: 2px -2px 0px var(--font-color);
+    text-shadow: 3px -3px 0px var(--font-color);
 
     /* Creates the shadow outline */
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: var(--font-color);
+    -webkit-text-stroke: 1px var(--font-color);
 
     /* Positioning on the page */
     margin-top: 0;
     margin-left: 2%;
+}
+
+#personal {
+    /* Grid dimensions */
+    height: 75vh;
+    width: 90vw;
+    margin: 0px 5% 5% 5%;
+
+    /* Creates grid layout */
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+    row-gap: 2vw;
+    column-gap: 2vw;
+
+    animation: transitionIn 3s;
+}
+
+/* Page load tranition */
+@keyframes transitionIn {
+    from {
+        color: rgba(0, 0, 0, 0);
+        height: 20vh;
+        width: 25vw;
+        margin: 100vh calc(50vw + 12.5vw) 0 calc(50vw - 12.5vw);
+    }
+
+    70% {
+        color: rgba(0, 0, 0, 0);
+        height: 20vh;
+        width: 25vw;
+        margin: 30vh calc(50vw + 12.5vw) 0 calc(50vw - 12.5vw);
+    }
+
+    to {
+        color: rgba(0, 0, 0, 1);
+        height: 70vh;
+        width: 90vw;
+        margin: 0px 5% 5% 5%;
+    }
+}
+
+#personal>* {
+    background-color: white;
+
+    /* Set the color stripe to the top */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    border: 2px solid var(--font-color);
+
+    /* Create stagered border */
+    box-shadow: var(--border-showdow) 0px -1.5px var(--main-color), var(--border-showdow) var(--font-color);
+    
+    transition: transform .2s ease-in-out;
+}
+
+
+#personal>*:hover {
+    /* Enlarges the boxes */
+    transform: scale(1.05);
+
+    /* Shades in box shadow */
+    box-shadow: var(--border-showdow) var(--font-color);
+}
+
+#image {
+    /* Sets image dimensions */
+    height: 85%;
+    width: 89%;
+    margin: 5% 5% 6% 5%;
+
+    /* Sets image to entire element */
+    background-image: url("../../assets/Tyrece.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    /* Styles borders */
+    border: 2px solid var(--font-color);
+    border-radius: 2px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
+    animation: contentIn 4s;
+}
+
+.top {
+    /* Vertically centers text */
+    display: flex;
+    align-items: center;
+
+    /* Sets stripe dimensions */
+    width: 100%;
+    height: min(4vw, 40px);
+}
+
+/* Set stripe colors */
+#image-border .top {
+    background-color: #78c0ff;
+}
+
+#about .top {
+    background-color: #10162F;
+}
+
+#mission .top {
+    background-color: #ffa14f;
+}
+
+#skill .top {
+    background-color: #ff3232;
+}
+
+.top h1 {
+    /* Aligns text horizontally */
+    padding-left: 10px;
+
+    /* Styles text */
+    font-family: 'Courier Prime', Courier, monospace;
+    font-size: 1em;
+    color: white;
+
+    animation: contentIn 4s;
+}
+
+/* Fades in box content */
+@keyframes contentIn {
+    from {
+        opacity: 0;
+    }
+
+    70% {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Set box positions and dimensions */
+#image-border {
+    grid-area: 1 / 1 / span 4 / span 2;
+}
+
+#about {
+    grid-area: 1 / 3 / span 2 / span 4;
+}
+
+#mission {
+    grid-area: 3 / 4 / span 2 / span 2;
+}
+
+#skill {
+    grid-area: 2 / 7 / span 3 / span 2;
+}
+
+@media only screen and (max-width: 1150px) {
+    #image-border {
+        grid-area: 1 / 1 / span 4 / span 3;
+    }
+
+    #about {
+        grid-area: 1 / 4 / span 2 / span 5;
+    }
+
+    #mission {
+        grid-area: 3 / 4 / span 2 / span 2;
+    }
+
+    #skill {
+        grid-area: 3 / 6 / span 2 / span 3;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    #personal {
+        display: none;
+    }
 }
