--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
 
     /* Prevents scrolling */
-    overflow: hidden;
+    overflow-x: hidden;
 
     background-color: var(--main-color);
 
@@ -17,29 +17,11 @@ body {
     color: var(--font-color);
 }
 
-.heading {    
-    /* Width of the box behind the header */
-    width: 6em;
-
-    /* Custom 3D box heading with dynamic sizing */
-    font-size: min(4em, 7vw);
-    font-weight: 800;
-    color: transparent;
-    text-shadow: 3px -3px 0px var(--font-color);
-
-    /* Creates the shadow outline */
-    -webkit-text-stroke: 1px var(--font-color);
-
-    /* Positioning on the page */
-    margin-top: 0;
-    margin-left: 2%;
-}
-
-#personal {
+.grid {
     /* Grid dimensions */
     height: 75vh;
     width: 90vw;
-    margin: 0px 5% 5% 5%;
+    margin: 5%;
 
     /* Creates grid layout */
     display: grid;
@@ -47,35 +29,13 @@ body {
     grid-template-columns: repeat(8, 1fr);
     row-gap: 2vw;
     column-gap: 2vw;
-
-    animation: transitionIn 3s;
 }
 
-/* Page load tranition */
-@keyframes transitionIn {
-    from {
-        color: rgba(0, 0, 0, 0);
-        height: 20vh;
-        width: 25vw;
-        margin: 100vh calc(50vw + 12.5vw) 0 calc(50vw - 12.5vw);
-    }
-
-    70% {
-        color: rgba(0, 0, 0, 0);
-        height: 20vh;
-        width: 25vw;
-        margin: 30vh calc(50vw + 12.5vw) 0 calc(50vw - 12.5vw);
-    }
-
-    to {
-        color: rgba(0, 0, 0, 1);
-        height: 70vh;
-        width: 90vw;
-        margin: 0px 5% 5% 5%;
-    }
+.grid:not(#landing) {
+    animation: contentIn 4s;
 }
 
-#personal>* {
+.card {
     background-color: white;
 
     /* Set the color stripe to the top */
@@ -91,33 +51,12 @@ body {
     transition: transform .2s ease-in-out;
 }
 
-
-#personal>*:hover {
+.card:hover {
     /* Enlarges the boxes */
     transform: scale(1.05);
 
     /* Shades in box shadow */
     box-shadow: var(--border-showdow) var(--font-color);
-}
-
-#image {
-    /* Sets image dimensions */
-    height: 85%;
-    width: 89%;
-    margin: 5% 5% 6% 5%;
-
-    /* Sets image to entire element */
-    background-image: url("../../assets/Tyrece.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    /* Styles borders */
-    border: 2px solid var(--font-color);
-    border-radius: 2px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-
-    animation: contentIn 4s;
 }
 
 .top {
@@ -128,23 +67,6 @@ body {
     /* Sets stripe dimensions */
     width: 100%;
     height: min(4vw, 40px);
-}
-
-/* Set stripe colors */
-#image-border .top {
-    background-color: #78c0ff;
-}
-
-#about .top {
-    background-color: #10162F;
-}
-
-#mission .top {
-    background-color: #ffa14f;
-}
-
-#skill .top {
-    background-color: #ff3232;
 }
 
 .top h1 {
@@ -171,46 +93,5 @@ body {
 
     to {
         opacity: 1;
-    }
-}
-
-/* Set box positions and dimensions */
-#image-border {
-    grid-area: 1 / 1 / span 4 / span 2;
-}
-
-#about {
-    grid-area: 1 / 3 / span 2 / span 4;
-}
-
-#mission {
-    grid-area: 3 / 4 / span 2 / span 2;
-}
-
-#skill {
-    grid-area: 2 / 7 / span 3 / span 2;
-}
-
-@media only screen and (max-width: 1150px) {
-    #image-border {
-        grid-area: 1 / 1 / span 4 / span 3;
-    }
-
-    #about {
-        grid-area: 1 / 4 / span 2 / span 5;
-    }
-
-    #mission {
-        grid-area: 3 / 4 / span 2 / span 2;
-    }
-
-    #skill {
-        grid-area: 3 / 6 / span 2 / span 3;
-    }
-}
-
-@media only screen and (max-width: 750px) {
-    #personal {
-        display: none;
     }
 }
