--- a/libs/css/navbar.css
+++ b/libs/css/navbar.css
@@ -15,7 +15,7 @@
     margin-top: 0;
     margin-left: 2%;
 
-    animation: contentIn 4s;
+    /* animation: contentIn 4s; */
 }
 
 
@@ -32,7 +32,7 @@
     /* Dynamic width */
     width: min(40vw, 350px);
 
-    animation: contentIn 4s;
+    /* animation: contentIn 4s; */
 }
 
 #nav {
