--- a/libs/css/projects.css
+++ b/libs/css/projects.css
@@ -1,3 +1,11 @@
+#projects {
+    height: 90vh;
+}
+
+#vote .top {
+    background-color: #008b05;
+}
+
 #cache .top {
     background-color: #78c0ff;
 }
@@ -14,26 +22,30 @@
     background-color: #ff3232;
 }
 
+#vote {
+    grid-area: 1 / 1 / span 2 / span 2;
+}
+
+#cache {
+    grid-area: 1 / 3 / span 2 / span 2;
+}
+
+#cmd {
+    grid-area: 1 / 5 / span 2 / span 2;
+}
+
+#proxy {
+    grid-area: 1 / 7 / span 2 / span 2;
+}
+
+#flag {
+    grid-area: 3 / 1 / span 2 / span 2;
+}
+
 #web .top {
     background-color: rgb(255, 70, 252);
 }
 
-#cache {
-    grid-area: 1 / 1 / span 2 / span 2;
-}
-
-#cmd {
-    grid-area: 1 / 3 / span 2 / span 2;
-}
-
-#proxy {
-    grid-area: 1 / 5 / span 2 / span 2;
-}
-
-#flag {
-    grid-area: 1 / 7 / span 2 / span 2;
-}
-
 #web {
-    grid-area: 3 / 1 / span 2 / span 2;
+    grid-area: 3 / 3 / span 2 / span 2;
 }
