--- a/libs/css/landing.css
+++ b/libs/css/landing.css
@@ -1,5 +1,5 @@
 #landing {
-    /* animation: transitionIn 3s; */
+    animation: transitionIn 3s;
 }
 
 /* Page load tranition */
@@ -43,7 +43,7 @@
     border-radius: 2px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
-    /* animation: contentIn 4s; */
+    animation: contentIn 4s;
 }
 
 /* Set stripe colors */
