--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -20,8 +20,8 @@ body {
 .grid {
     /* Grid dimensions */
     height: 75vh;
-    width: 90vw;
-    margin: 5%;
+    width: 80vw;
+    margin: 0px 10% 0px 10%;
 
     /* Creates grid layout */
     display: grid;
@@ -32,7 +32,8 @@ body {
 }
 
 .grid:not(#landing) {
-    /* animation: contentIn 4s; */
+    animation: contentIn 4s;
+    margin-top: 0;
 }
 
 .card {
@@ -114,7 +115,7 @@ body {
     font-size: 1em;
     color: white;
 
-    /* animation: contentIn 4s; */
+    animation: contentIn 4s;
 }
 
 /* Fades in box content */
